# deep_search_pro

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  requirements.txt
agent/: llm.py  main_agent.py  prompts.py
agent/subagents/: network_search_agent.py
api/: context.py  monitor.py  server.py
app/core/: __init__.py  config.py  enums.py  exceptions.py  lifespan.py  logging.py  middleware.py
prompt/: prompts.yaml
ragflow/: chat_assistant_demo.py  rag_config.py
scripts/demos/: README.md  chat_assistant_demo.py  knowledge_demo.py
tools/: db_tools.py  markdown_tools.py  ragflow_tools.py  tavily_tool.py  upload_file_read_tool.py
ui/: Dockerfile  index.html  nginx.conf  package.json  vite.config.ts
ui/src/: App.vue
ui/src/components/: HelloWorld.vue
utils/: path_utils.py  word_converter.py
